Changes
=======

3.6.2 (unreleased)
------------------

- TBD

3.6.1 (2010-07-08)
------------------

- TextIndex:  reuse the lexicon from the underlying Okapi / Cosine
  index, if passed.  (LP #232516)

- Lexicon:  avoid raising an exception when indexing None. (LP #598776)

3.6.0 (2009-08-03)
------------------

- Improved test readability and reached 100% test coverage.

- Fixed a broken optimization in okascore.c: it was passing a Python
  float to the PyInt_AS_LONG() macro. This resulted in wrong scores,
  especially on 64 bit platforms, where all scores typically ended up
  being zero.

- Changed okascore.c to produce the same results as its Python
  equivalent, reducing the brittleness of the text index tests.

3.5.2 (2009-06-09)
------------------

- Port okascore.c optimization used in okapiiindex from Zope2 catalog
  implementation.  This module is compiled conditionally, based on
  whether your environment has a working C compiler.

- Don't use ``len(self._docweight)`` in okapiindex _search_wids method
  (obtaining the length of a BTree is very expensive at scale).
  Instead use self.documentCount().  Also a Zope2 port.

3.5.1 (2009-02-27)
------------------

- The baseindex, okapiindex, and lexicon used plain counters for various
  lengths, which is unsuitable for production applications.
  Backport code from Zope2 indexes which opportunistically replaces the
  counters with BTree.Length objects.

- Backport non-insane version of baseindex._del_wordinfo from
  Zope2 text index.  This improves deletion performance by
  several orders of magnitude.

- Don't modify given query dictionary in the KeywordIndex.apply method.

- Move FieldIndex's sorting functionality to a mixin class so it can
  be reused by zc.catalog's ValueIndex.

3.5.0 (2008-12-30)
------------------

- Remove zope.testing from dependencies, as it's not really needed.

- Define IIndexSort interface for indexes that support sorting.
